--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <div class="buttons">
             <button>Google Search</button>
-            <button>I'm Feeling Lucky</button>
+            <button>I'm Feeling Lucky Ashutosh</button>
         </div>
     </div>
 
@@ -132,30 +132,26 @@
     <!-- Salesforce Agentforce Bot -->
     <!-- ========================= -->
 
-    <script type="text/javascript">
-        function initEmbeddedMessaging() {
-            try {
-                embeddedservice_bootstrap.settings.language = 'en_US';
+<script type='text/javascript'>
+	function initEmbeddedMessaging() {
+		try {
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
-                embeddedservice_bootstrap.init(
-                    '00D9Q00000KI07h',
-                    'Netlify',
-                    'https://zurichcx--uat.sandbox.my.site.com/ESWNetlify1765783851838',
-                    {
-                        scrt2URL: 'https://zurichcx--uat.sandbox.my.salesforce-scrt.com'
-                    }
-                );
-            } catch (err) {
-                console.error('Error loading Embedded Messaging: ', err);
-            }
-        }
-    </script>
+			embeddedservice_bootstrap.init(
+				'00D9Q00000KI07h',
+				'externalGoogleSite',
+				'https://zurichcx--uat.sandbox.my.site.com/ESWexternalGoogleSite1765803885978',
+				{
+					scrt2URL: 'https://zurichcx--uat.sandbox.my.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
+</script>
+<script type='text/javascript' src='https://zurichcx--uat.sandbox.my.site.com/ESWexternalGoogleSite1765803885978/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
-    <script
-        type="text/javascript"
-        src="https://zurichcx--uat.sandbox.my.site.com/ESWNetlify1765783851838/assets/js/bootstrap.min.js"
-        onload="initEmbeddedMessaging()">
-    </script>
 
 </body>
 </html>
