--- a/index.html
+++ b/index.html
@@ -1,132 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Google</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZWP Training Site</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
             margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #ffffff;
-            color: #202124;
+            padding: 0;
         }
-
-        .top-bar {
-            display: flex;
-            justify-content: flex-end;
-            padding: 15px 20px;
-            font-size: 13px;
-        }
-
-        .top-bar a {
-            margin-left: 15px;
-            color: #202124;
-            text-decoration: none;
-        }
-
-        .top-bar a:hover {
-            text-decoration: underline;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 10%;
-        }
-
-        .logo {
-            font-size: 90px;
-            font-weight: bold;
-            letter-spacing: -5px;
-        }
-
-        .logo span:nth-child(1) { color: #4285F4; }
-        .logo span:nth-child(2) { color: #EA4335; }
-        .logo span:nth-child(3) { color: #FBBC05; }
-        .logo span:nth-child(4) { color: #4285F4; }
-        .logo span:nth-child(5) { color: #34A853; }
-        .logo span:nth-child(6) { color: #EA4335; }
-
-        .search-box {
-            margin-top: 25px;
-            width: 580px;
-            max-width: 90%;
-        }
-
-        .search-box input {
-            width: 100%;
-            padding: 14px 20px;
-            border-radius: 24px;
-            border: 1px solid #dfe1e5;
-            font-size: 16px;
-            outline: none;
-        }
-
-        .search-box input:hover,
-        .search-box input:focus {
-            box-shadow: 0 1px 6px rgba(32,33,36,0.28);
-            border-color: rgba(223,225,229,0);
-        }
-
-        .buttons {
-            margin-top: 25px;
-        }
-
-        .buttons button {
-            margin: 5px;
-            padding: 10px 16px;
-            font-size: 14px;
-            border: none;
-            border-radius: 4px;
-            background-color: #f8f9fa;
-            cursor: pointer;
-        }
-
-        .buttons button:hover {
-            border: 1px solid #dadce0;
-        }
-
-        footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background-color: #f2f2f2;
+        header {
+            background: #004080;
+            color: white;
             padding: 10px 20px;
-            font-size: 14px;
-            color: #70757a;
+        }
+        header nav a {
+            color: white;
+            margin-right: 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .hero {
+            text-align: center;
+            padding: 40px 20px;
+            background: #f0f0f0;
+        }
+        .hero h1 {
+            margin-bottom: 10px;
+        }
+        .sections {
+            max-width: 1000px;
+            margin: 30px auto;
+            padding: 0 20px;
+        }
+        .sections .item {
+            margin-bottom: 20px;
+        }
+        footer {
+            background: #222;
+            color: #ccc;
+            text-align: center;
+            padding: 15px;
+            margin-top: 30px;
+        }
+        footer a {
+            color: #ccc;
+            text-decoration: none;
+            margin: 0 10px;
         }
     </style>
 </head>
-
 <body>
 
-    <div class="top-bar">
-        <a href="#">Gmail</a>
-        <a href="#">Images</a>
+<header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Accessibility</a>
+        <a href="#">General Guides</a>
+        <a href="#">Foundations</a>
+        <a href="#">Knowledge Hub</a>
+        <a href="#">FAQ</a>
+    </nav>
+</header>
+
+<section class="hero">
+    <h1>Welcome to the ZWP Training Site</h1>
+    <p>Find what you need — Learn how to work with Sitecore and ZWP</p>
+</section>
+
+<div class="sections">
+    <div class="item">
+        <h2>01 Get Started</h2>
+        <p>New to ZWP and Sitecore? Check out the basics and initial set-up guides.</p>
     </div>
-
-    <div class="container">
-        <div class="logo">
-            <span>G</span><span>o</span><span>o</span>
-            <span>g</span><span>l</span><span>e</span>
-        </div>
-
-        <div class="search-box">
-            <input type="text" placeholder="Search Google or type a URL" />
-        </div>
-
-        <div class="buttons">
-            <button>Google Search</button>
-            <button>I'm Feeling Lucky Ashutosh</button>
-        </div>
+    <div class="item">
+        <h2>02 Foundations</h2>
+        <p>Learn everything you need to know about components, grids, responsive, etc.</p>
     </div>
+    <div class="item">
+        <h2>03 Component Library</h2>
+        <p>Build pages by dragging and dropping components where needed.</p>
+    </div>
+    <div class="item">
+        <h2>04 Knowledge Hub</h2>
+        <p>Explore articles, search configurations, and technical guidelines.</p>
+    </div>
+    <div class="item">
+        <h2>05 News Releases</h2>
+        <p>How to create news release content and search configs.</p>
+    </div>
+    <div class="item">
+        <h2>06 Frequently Asked Questions</h2>
+        <p>Answers to common questions about Sitecore Headless & components.</p>
+    </div>
+</div>
 
-    <footer>
-        India
-    </footer>
+<footer>
+    <p>Useful links:</p>
+    <a href="#">Foundations</a> |
+    <a href="#">Component Library</a> |
+    <a href="#">Knowledge Hub</a>
+    <p>&copy; 2025 Zurich – All rights reserved</p>
+</footer>
 
     <!-- ========================= -->
     <!-- Salesforce Agentforce Bot -->
@@ -151,7 +128,6 @@
 	};
 </script>
 <script type='text/javascript' src='https://zurichcx--uat.sandbox.my.site.com/ESWexternalGoogleSite1765803885978/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
-
 
 </body>
 </html>
